Fixed the spacing of the report button between 403 and 404 pages

--- a/pages/styles/main.css
+++ b/pages/styles/main.css
@@ -161,7 +161,7 @@ body .container-card {
     justify-content: center;
 }
 
-.container-card__403 .text{
+.container-card  .text{
     margin-top: 56px;
 }
 
@@ -196,14 +196,14 @@ body .container-card {
 .container-card .status-code {
     max-width: 213px;
     max-height: 37px;
-    margin: 63px 0 5%;
+    margin: 63px 0 73px;
     font-size: 16px;
     font-weight: 600;
     padding-top: 5px;
 }
 
 .container-card__404 .status-code {
-    margin: 63px 0 15%;
+    margin: 63px 0 83px;
 }
 
 .container-card .report {
@@ -289,9 +289,16 @@ body .footer-card {
     .container-card .status-code {
         margin: 35px 0 30px;
     }
+
+    .container-card__404 .status-code {
+        margin-top: 45px;
+    }
 }
 
 @media screen and (max-width: 1080px) {
+    .container-card__404 .status-code {
+        margin-top: 45px;
+    }
 
     .footer-card .links {
         display: grid;
@@ -329,12 +336,25 @@ body .footer-card {
         margin: 40px 0 25px;
     }
 
+    .container-card__404 .status-code {
+        margin: 50px 0 25px;
+    }
+
     .footer-card .links a {
         padding-bottom: 10px;
     }
 }
 
 @media screen and (max-width: 810px) {
+
+    .container-card__404 .links div {
+        padding-top: 0;
+    }
+
+    .container-card__404 .status-code {
+        margin-top: 70px;
+    }
+
     body .footer-card {
         flex-direction: column;
     }
@@ -352,6 +372,12 @@ body .footer-card {
         max-width: 150%;
     }
 }
+
+@media screen and (max-width: 776px) {
+    .container-card__404 .text {
+        margin-top: 45px;
+    }
+}
  
 @media screen and (max-width: 680px) {
     body .header-card {
@@ -364,6 +390,7 @@ body .footer-card {
 
     .container-card h1 {
         font-size: 50px;
+        margin-top: 60px;
     }
     
     .container-card .text {
@@ -385,8 +412,12 @@ body .footer-card {
     }
     
     .container-card .status-code {
-        margin: 25px 0 30px;
+        margin-bottom: 35px;
         font-size: 14px;
+    }
+
+    .container-card__404 .status-code {
+        margin-bottom: 65px;
     }
 
     body .footer-card {
@@ -402,6 +433,12 @@ body .footer-card {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     } 
+}
+
+@media screen and (max-width: 632px) {
+    .container-card__404 .status-code {
+        margin-top: 50px;
+    }
 }
 
 @media screen and (max-width: 550px) {
@@ -435,6 +472,10 @@ body .footer-card {
         margin: 20px 0 15px;
     }
 
+    .container-card__404 .status-code {
+        margin: 20px 0 52px;
+    }
+
     body .footer-card {
         margin-top: 0;
     }
@@ -454,6 +495,10 @@ body .footer-card {
         margin: 40px 0 50px;
     }
 
+    .container-card__404 .status-code {
+        margin: 60px 0 70px;
+    }
+
     .container-card .report {
         margin-bottom: 32px;
     }
@@ -464,5 +509,11 @@ body .footer-card {
 
     .footer-card .text {
         max-width: inherit;
+    }
+}
+
+@media screen and (max-width: 449px) {
+    .container-card__404 .status-code {
+        margin-bottom: 48px;
     }
 }
